--- a/peliculas/pubspec.yaml
+++ b/peliculas/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  card_swiper: ^2.0.1
+  card_swiper: ^1.0.4
+  provider: ^6.0.2
+  http: ^0.13.4
   flutter_test:
     sdk: flutter
     
