--- a/qr_reader/pubspec.yaml
+++ b/qr_reader/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   path_provider: ^2.0.9
   sqflite: ^2.0.0-nullsafety.2
+  font_awesome_flutter: ^10.1.0
+  url_launcher: ^6.1.0
+  google_maps_flutter: ^2.1.3
 
 dev_dependencies:
   flutter_test:
